common/common.scss
/* VARIABLES */
$white: #FFFFFF;

/* MIXINS */

@mixin buttonShadow {
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
    will-change: box-shadow;
    transition: box-shadow .2s cubic-bezier(.4,0,1,1), background-color .2s cubic-bezier(.4,0,.2,1), color .2s cubic-bezier(.4,0,.2,1);
}

@mixin boxShadow {
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
}

/* BASE STYLES */
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
    font-family: sans-serif;

    // set base font size
    font-size: 14px;
    @media (min-width: 768px) {
        font-size: 16px;
    }
    @media (min-width: 992px) {
        font-size: 18px;
    }

    line-height: 1.15;

    -webkit-text-size-adjust: 100%;
       -moz-text-size-adjust: 100%;
        -ms-text-size-adjust: 100%;
            text-size-adjust: 100%;

    -ms-overflow-style: scrollbar;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

@-ms-viewport {
  width: device-width;
}


/* TYPOGRAPHY */
//use Source Sans Pro


body {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 1rem;
    line-height: 1.618;
    font-weight: 300;
    text-align: left;
}

body button,
body input,
body select,
body textarea {
  font-family: 'Source Sans Pro', sans-serif;
}

body code,
body kbd,
body pre,
body samp {
  font-family: 'Source Code Pro', monospace;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 400;
    letter-spacing: 0.5px;
}

h1, #topic-title h1, .body-page h1, .styleguide .styleguide-section .section-title {
    font-size: 1.5rem;
    font-weight: 400;
    letter-spacing: 0;
    line-height: 1.2;
}

.names span.first {
    font-weight: 600;
}

/* BUTTONS */
// rounded basic buttons
.btn {
    border-radius: 3px;
    background: #d8d8d8;
    text-transform: uppercase;
    font-weight: 400;
    font-size: 0.875rem;
    letter-spacing: 1px;

    &:hover {
        background: #c0c0c0;
        color: #343C3D; // no change
    }
}

.btn.btn-danger {
    background: #C91432;

    &:hover {
        background: #b4122d;
        color: #F0F0F0; // no change
    }
}


/*
.btn {
    border-radius: 3px;
    background: #A1D5B4;
    text-transform: uppercase;
    @include buttonShadow;

    &:hover {
        background: #90CDA6;
        color: #343C3D;
        box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2);
    }

    &:active {
        background: #90CDA6;
        box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2);
    }
}

.btn.btn-danger {
    background: #C91432;
}
*/

/* HEADER */
.d-header {
    box-shadow: none;
    height: 63px;
}

.d-header #site-logo {
    max-height: 39px;
}

.d-header-icons .d-icon {
    font-size: 24px;
    line-height: 1;
}

.d-header-icons .icon {
    width: 40px;
    height: 40px;
    padding: 3px;
}

.d-header-icons .icon img.avatar {
    width: 31px;
    height: 31px;
}







/* TOPIC POSTS */
.topic-avatar {
    position: absolute;
    width: 36px;
    top: 28px;
    left: 18px;
    border-top: 0;
    padding-top: 0;
    float: none;
}

.topic-avatar .avatar {
    height: 36px;
    width: 36px;
}

.topic-body {
    float: none;

    // test this thoroughly!!!!!
    width: 735px;

    @include boxShadow;
    background-color: #fff;
    border: 0;
    border-radius: 0px;
    padding: 0;
    margin-top: 10px;
    margin-bottom: 6px;
}

.topic-meta-data {
  padding: 10px 16px 0 68px;
  min-height: 58px;
}

.topic-meta-data .post-info a {
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 0.5px;
    padding: 10px 8px;
}

.topic-body .regular {
    margin: 20px 20px 0 20px;
}


// Post buttons
nav.post-controls button {
  font-size: 1.167rem;
}

nav.post-controls a, nav.post-controls button {
  color: #9190AC;
}

nav.post-controls button.d-hover, nav.post-controls button:focus {
  border-radius: 3px;
}

nav.post-controls button:active {
    box-shadow: none;
}

nav.post-controls .create i {
    margin-right: 8px;
}

nav.post-controls button.create {
  color: #9190AC;

  &.d-hover {
    color: #343C3D;
  }
  span.d-button-label {
    font-size: 1rem;
  }
}

// LIKE BUTTON
nav.post-controls .like-button {
  border-radius: 3px;
}

nav.post-controls .like-button .like-count {
    font-size: 1rem;
    color: #9190AC;
}

.who-liked {
    font-size: 0.889rem;
    font-weight: 400;
    letter-spacing: 0.5px;
}

.who-liked a {
    margin: 0 0.444rem 0.444rem 0;
    vertical-align: middle;
}

// TOPIC MAP

.topic-map {
    background-color: transparent;
    border: 0;
    margin: 0;
    position: relative;
}

.topic-map .map li {
    padding: 8px 10px;
    line-height: 1.15;
}

.topic-map .map .topic-map-post {

    margin-top: 8px;

    span.relative-date {
        font-size: 0.889rem;
        letter-spacing: 0.5px;
    }
}

.topic-map .map .number {
  font-size: 0.889rem;
  font-weight: 300;
}

.topic-map h4 {
  margin: 0 0 2px 0;
  font-size: 0.889rem;
  font-weight: 300;
  line-height: 1.15;
}


.topic-map .buttons .btn {
  border: 0;
  padding: 0 1.333rem;
  color: #FFFFFF;
  background: #A1D5B4;
  border-radius: 0;
}

.topic-map .buttons .btn:hover {
    background: #90CDA6;
}

.topic-map .buttons .btn .fa {
    color: #FFF;
}

.topic-map .map a, .topic-map .map .number {
    line-height: 1.15;
}

.topic-map .avatars {
  border-top: none;
}



.extra-info h1 {
    margin: 5px 0 0 0;
    font-size: 21px;
    line-height: inherit;
    width: 100%;
    color: red;
}

/* PANELS */
.table, .topic-list, .category-list, .latest-topic-list, .directory table, .groups-table, .admin-contents table:not(.pika-table) {
    background-color: $white;
    border: 0;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
    margin-bottom: 16px;
    max-width: 100%;
    width: 100%;
}

tbody {
    border-top: 0;
}

.table tbody tr, .topic-list > tbody > tr, .topic-list > thead > tr, .category-list > tbody > tr, .category-list > thead > tr, .latest-topic-list .table-heading, .latest-topic-list-item, .directory table tbody tr, .groups-table tbody tr, .user-main .user-content .user-invite-list tr, .admin-contents table:not(.pika-table) tr {
    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
}

.table thead td,
.table thead th, .topic-list thead td,
.topic-list thead th, .category-list thead td,
.category-list thead th, .latest-topic-list .more-topics,
.latest-topic-list .table-heading,
.directory table thead td,
.directory table thead th, .groups-table thead td,
.groups-table thead th, .user-main .user-content .user-invite-list th, .admin-contents table:not(.pika-table) thead td,
.admin-contents table:not(.pika-table) thead th, .permalinks .col.heading,
.screened-emails .col.heading,
.screened-ip-addresses .col.heading,
.screened-urls .col.heading,
.search-logs-list .col.heading,
.staff-actions .col.heading,
.web-hook-events .col.heading {
    color: #343C3D;
    font-size: 0.778rem;
    font-weight: 400;
    height: 56px;
    padding: 16px 12px 12px 21px;
    vertical-align: middle;
}

// fix for odd 2px shift due to table cell alignment
.latest-topic-list .table-heading {
  padding-top: 18px;

}


.deleted .topic-body {
  background-color: transparent;
  opacity: 0.5;
}

/* HOME CATEGORY LISTS */
.category-list tbody .category h3 a[href] {
    color: #6CBD8A;
}

.category-list tbody .category h3 {
    font-size: 0.889rem;
    line-height: 1.15;
    font-weight: 400;
    text-transform: uppercase;
    margin-bottom: 0.167rem;
}

// HOME latest topics list
.latest-topic-list-item .main-link .top-row {
    margin-bottom: 0.15rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.4;
}

// visited links
.topic-list-item.visited a.title:not(.badge-notification),
.latest-topic-list-item.visited a.title:not(.badge-notification),
.category-topic-link.visited a.title:not(.badge-notification) {
    color: #9190AC;
}


.list-controls #create-topic {
  font-size: 0.889rem;
  background: #A1D5B4;
  font-weight: 400;

  @include buttonShadow;

	.d-icon {
	}

	&:hover,
	&.d-hover {
		.d-icon {
			color: inherit;
		}
	}
}

// Category list header
h6,
div.poll .poll-info .info-text,
.select-kit.dropdown-select-box .select-kit-row .texts .name,
.category-list tbody .category h3,
.small-action .small-action-desc,
.topic-map h3,
.settings .setting h3 {

    color: #343C3D;

}

.category-list thead td:first-of-type,
.category-list thead th:first-of-type {
    padding-left: 24px;
}
.category-list thead td:last-of-type,
.category-list thead th:last-of-type {
    padding-right: 18px;
}

.category-list tbody td:first-of-type,
.category-list tbody th:first-of-type {
  padding-left: 24px;
}

.category-list tbody td:last-of-type,
.category-list tbody th:last-of-type {
  padding-right: 18px;
}

.category-list tbody .category {
  border-left-width: 2px;
}

.category-list thead th {
    white-space: nowrap;
}

.category-list .topics {
    width: 100px;
    font-size: 0.778rem;
    font-weight: 300;    
}



/* BADGES */
.badge-wrapper.bullet .badge-category-parent-bg, .badge-wrapper.bullet .badge-category-bg {
    width: 10px;
    height: 10px;
    border-radius: 50%;
}

.badge-wrapper {
    font-size: 0.778rem;
    font-weight: 400;
}

/* POSTS */
.cooked, .d-editor-preview {
    line-height: inherit;
}


/* FORM ELEMENTS */
.select-kit.combo-box .select-kit-header {
    background: $white;
}

.select-kit {
    .select-kit-collection {
        background: $white;
    }
}

/* ADMIN LAYOUT */

